--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^8.6.8",
     "vue": "^3.0.4",
     "vue-router": "^4.0.3"
   },
