--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@vue/compiler-sfc": "^3.0.4",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "cypress": "^7.5.0",
+    "cypress-plugin-tab": "^1.0.5",
     "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.2.0",
