--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vee-validate": "^4.4.5",
     "firebase": "^8.6.8",
+    "json-server": "^0.16.3",
+    "vee-validate": "^4.4.5",
     "vue": "^3.0.4",
     "vue-router": "^4.0.3"
   },
