--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "server": "json-server --watch db.json"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.1.20",
+    "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "firebase": "^8.6.8",
+    "vee-validate": "^4.4.5",
     "vue": "^3.0.4",
     "vue-router": "^4.0.3"
   },
