--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@vee-validate/rules": "^4.1.20",
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "firebase": "^8.6.8",
     "json-server": "^0.16.3",
